--- a/underwriter-microservice/src/main/resources/application.yml
+++ b/underwriter-microservice/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${APP_PORT}
+  port: 8081
 
 spring:
   application:
@@ -9,10 +9,10 @@ spring:
       ddl-auto: update
     show-sql: true
   datasource:
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: "root"
+    password: "password"
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}"
+    url: "jdbc:mysql://localhost:3306/aline_financial"
     initialization-mode: always # This is to automatically insert data.sql
 
 app:
@@ -28,6 +28,14 @@ app:
   landing-portal: "${PORTAL_LANDING}"
   member-dashboard: "${PORTAL_DASHBOARD}"
   security:
-    secret-key: "${ENCRYPT_SECRET_KEY}"
+    secret-key: "xBnkRrjIeZvtl3864JbRjg5rpLhZPneH"
     jwt:
-      secret-key: "${JWT_SECRET_KEY}"
+      secret-key: "7y5Phi01FZzd60UJMkGinerMiBgNy4DP"
+
+logging:
+  file:
+    path: "../home/Documents/logs"
+    name: "app.log"
+
+
+management.endpoints.web.exposure.include: '*'
